# signal-ai

./: .env  .env.example  .gitignore  .gitmodules  BOT_FLOW.md  CODEX_PROMPT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFESTO.md  README.md  docker-compose.yml  filtered_requirements.txt  integration_plan.md  main.py  pyproject.toml  signal_client.db
.github/workflows/: ci.yml
.kilocode/: mcp.json
.roo/: mcp.json
docs/: adapter_enhancement_plan.md  api_audit.md  architecture.md  bot_interaction_flow.md  coding_standards.md  development_philosophy.md  development_setup.md  implementation_plan.md  logging_strategy.md  persistence_audit.md  refactor_playbook.md  refactoring_plan.md  signal-ai.md  signal-client-notes.md  signal-client-refactor.md  signalbot-library.md  signalbot.md  signalbot_roadmap.md
example/: convert.py
scripts/: check.sh  format.sh  link.sh  logs.sh  manage_signal_api.py  restart.sh  setup.sh  setup_workspace.sh  start.sh  status.sh  stop.sh  test-app.sh  test-lib.sh
src/: bot.py  debug_pydantic.py
src/commands/: hello.py  help.py  search_web.py
src/signal_ai/: __init__.py  app.py  bot.py  cli.py  config.py  middlewares.py  prompts.yaml
src/signal_ai/app/: container.py  main.py
src/signal_ai/commands/: __init__.py  admin.py  advanced.py  attachments.py  balance.py  config.py  contacts.py  convert.py  delete.py  dispatcher.py  dlq_fail.py  echo.py  edit.py  hello.py  help.py  history.py  image.py  multiple_triggered.py  newgroup.py  ping.py  react.py  regex_triggered.py  remind.py  reply.py  roll.py  search.py  search_web.py  settings.py  share.py  todo.py  types.py  typing.py  utils.py
src/signal_ai/commands/ai/: image.py  search.py
src/signal_ai/commands/config/: config.py
src/signal_ai/commands/context/: context.py  new.py
src/signal_ai/commands/memory/: remember.py
src/signal_ai/commands/system/: catch_all.py  help.py  ping.py
src/signal_ai/commands/task/: remind.py  todo.py
src/signal_ai/commands/utility/: convert.py
src/signal_ai/core/: ai_client.py  command.py  config.py  context.py  decorators.py  dispatcher.py  group_manager.py  logging.py  memory_manager.py  message_handler.py  persistence.py  prompt_manager.py  reasoning_engine.py  tool_manager.py
src/signal_ai/domain/: context.py  signal.py  tool.py
src/signal_ai/infrastructure/: ai.py  persistence.py  signal.py
src/signal_ai/services/: dlq.py  handler.py  health.py  reasoning.py  scheduler.py  state.py  tooling.py
src/signal_ai/tools/: meeting_scheduler.py  web_search.py
src/signal_ai/tools/ai/: image.py  search.py
src/signal_ai/tools/config/: config.py
src/signal_ai/tools/context/: context.py
src/signal_ai/tools/memory/: remember.py
src/signal_ai/tools/system/: help.py  ping.py
src/signal_ai/tools/task/: remind.py  todo.py
src/tests/: conftest.py
src/tests/core/: test_memory_manager.py  test_reasoning_engine.py  test_tool_manager.py
