[project]
name = "signal-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "cornellshakh",email = "kornelshakh@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "apscheduler",
    "attrs",
    "frozenlist",
    "idna",
    "multidict",
    "packaging",
    "phonenumbers",
    "propcache",
    "python-dotenv",
    "signalbot @ file:./vendor/signalbot",
    "typing-extensions",
    "typing-inspection",
    "tzlocal",
    "websockets",
    "yarl",
    "markitdown[all]",
    "tinydb (>=4.8.2,<5.0.0)",
    "structlog",
    "google-generativeai",
    "tenacity",
    "cachetools",
    "redis",
    "pyyaml",
    "jinja2",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings"
]

[tool.poetry]
packages = [{include = "signal_ai", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.10.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
norecursedirs = "vendor"
