[tool.poetry]
name = "signal-ai"
version = "0.1.0"
description = "Signal bot built on top of the local signal-client."
authors = ["signal-ai maintainers"]
readme = "README.md"
package-mode = true
packages = [{ include = "signal_ai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
signal-client = { path = "../signal-client", develop = true }
redis = ">=5.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
ruff = ">=0.5.0"
mypy = ">=1.10.0"
pytest = ">=8.3.2"
pytest-cov = ">=5.0.0"
pytest-xdist = "^3.8.0"
pytest-asyncio = ">=0.23.8"
aresponses = ">=3.0.0"
pytest-mock = ">=3.14.0"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
